bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:2: error: ';' expected but 'if' found.
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {if (vacation) {return true} if weekday {return false}
                                                                                         ^